--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <h1 class="text-center">Welcome to Code Decoder</h1>
     <div class="container bg-blue">
-        <label for="nothing" ><h3 class="to-center-label">HOLA !!! TYPE THE CODE</h3></label>
+        <h3 class="to-center-label">Type the ASCII code to convert to charcter</h3>
         <input type="text" class="to-center-input" id="text-1">
         <br>
         <br>
