code decoder modify4

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <input type="text" class="to-center-input" id="text-2">
         <br>
         <br>
-        <button type="Submit" style="padding-left: 20px; padding-right: 20px;" onclick="Clear()">Clear</button>
+        <button type="Submit" style="padding-left: 20px; padding-right: 20px;" onclick="Clear()">CLEAR</button>
         <br>
     </div>
     <img src="" alt="Logo">
