code decoder modify5

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1 class="text-center">Welcome to Code Decoder</h1>
     <div class="container bg-blue">
         <h3 class="to-center-label">Type the ASCII code to convert to character</h3>
-        <input type="text" class="to-center-input" id="text-1" placeholder="Type input like 'A B C'">
+        <input type="text" class="to-center-input" id="text-1" placeholder="90 95 96">
         <br>
         <br>
         <button type="Submit" onclick="Decode()">DECODE</button>
