code decoder modify6

--- a/index.html
+++ b/index.html
@@ -44,5 +44,11 @@
         <br>
     </div>
     <img src="" alt="Logo">
+
+    <footer>
+        <p>©Made with ⚡ by Pritham Baswani Giryalkar</p>
+    </footer>
+
+    
 </body>
 </html>
