code decoder modify7

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <img src="" alt="Logo">
 
     <footer>
-        <p>©Made with ⚡ by Pritham Baswani Giryalkar</p>
+        <p>©Made with ⚡ by Pritham</p>
     </footer>
 
     
